fix(root): changed spacing token affecting the spacing between page content
Used a spacing token that was half the size to halve the margin between content and anchor nav, so
that it matches the designs. Also, fixed incorrect caption.

--- a/src/templates/CoreTemplate/index.css
+++ b/src/templates/CoreTemplate/index.css
@@ -87,7 +87,7 @@ ic-alert {
 
 @media screen and (min-width: 1201px) and (max-width: 1384px) {
   .content-container {
-    width: calc(100% - var(--ic-space-xxl));
+    width: calc(100% - var(--ic-space-lg));
   }
 }
 
